--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+--extra-index-url https://download.pytorch.org/whl/cu118
 pytorch-lightning==2.5.0.post0
 torchmetrics==1.6.1
 torch==2.6.0+cu118
@@ -14,4 +15,5 @@ regex==2024.11.6
 requests==2.32.3
 matplotlib==3.10.1
 pandas==2.2.3
+tensorboard
 
